# dbManager-autorefeyelib

./: Pipfile  README.md  dbManager.py  pyproject.toml  scrDemo.py  test.txt
Documents/Reports/IOLpower/August 2021/: IOLPredictionSummary.bib  IOL_MethodSummary.tex
Documents/Reports/IOLpower/June2021/: IOLPredictionSummary.bib  IOL_MethodSummary.tex
Documents/Reports/SubjectiveRefraction/June2021/: Report.tex  ReportRxPrediction.bib
requirements/: All.txt  GUI.txt  Refraction.txt  Revo.txt
scripts/GUI/: scrRunAutoRefGUI.py  scrTestGraphics.py
scripts/IOL/: scrCreatePreOpPostOpDB.py  scrGenerateIOLEMRjointDB.py  scrPredictFinalRefractionPostOp.py  scrRunIOLclassifier.py
scripts/Mergers/: scrMergeCIVVX120WithEMR.py  scrMergePrevotVX130WithEMR.py
scripts/Parsers/: scrRunOplusParser.py  scrRunVx120Parser.py  scrTestXmlParser.py
scripts/Refraction/: scrRunBayesianClassifier.py  scrRunEmbeddedBinaryClassifiers.py  scrRunRefractionRfClassifier.py  scrRunRfDirectionalClassifier.py
scripts/Retroillumination/: scrExtractRetroilluminationFromVx120.py  scrRunRetroAnalysis.py
scripts/Topography/: scrExtractTopoMapsFromVx120.py
