[tool.poetry]
name = "AutoRefEyelib"
version = "0.1.0"
description = "Classes to parse vx130 measurements and predict the subjective refraction from objective vx130 measurements"
authors = ["Ofir Shukron <ofir.shukron@mikajaki.com>"]

[tool.poetry.dependencies]
python = "~3.9"
cycler = "0.10.0"
daemon-process = "0.9.2"
joblib = "1.0.1"
numpy = "1.21.3"
opencv-python = "4.5.4.60"
pandas = "^1.2.0"
Pillow = "8.1.0"
pyparsing = "2.4.7"
pytesseract = "0.3.7"
python-dateutil = "2.8.1"
pytz = "2021.1"
scikit-learn = "1.0"
scipy = "1.7.1"
six = "1.15.0"
threadpoolctl = "2.1.0"
xmltodict = "0.12.0"
watchdog="2.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.5.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
